c4prj1_deck/grade.txt
Grading at Sun Mar  7 21:43:47 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:44:26: error: ‘hand’ undeclared (first use in this function)
       if (!deck_contains(hand[j],add)){
                          ^
deck.c:44:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
